trunk/Archive2/26/bd44095c8568a9/output
main.cpp: In constructor 'Boo::Boo(Foo*)':
main.cpp:14:8: error: invalid use of incomplete type 'class Foo'
     foo->f();
        ^
main.cpp:10:7: error: forward declaration of 'class Foo'
 class Foo;
       ^
